# FileSize

./: .gitignore  CLAUDE.md  CMakeLists.txt  FileScanner.h  FileSorter.cpp  FileSorter.h  SizeFormatter.cpp  SizeFormatter.h  UI.cpp  UI.h  app.manifest  main.cpp
include/: UI.h
src/: FileScanner.cpp  UI.cpp  main.cpp
